add support for multiple responses validations
